--- a/Copy of HolaMundo/WebContent/css/estilos.css
+++ b/Copy of HolaMundo/WebContent/css/estilos.css
@@ -1,7 +1,6 @@
 @CHARSET "UTF-8";
 body {
-	/*font-family: Arial, sans-serif; /* serif, monospace */
-	font-family: "Noto Sans";
+	font-family: Arial, sans-serif; /* serif, monospace */
 }
 label {
 	display: inline-block;
@@ -16,6 +15,44 @@ input {
 	font-variant: small-caps;
 }
 
-header,footer{
+nav {
+    background-color: lightcyan;
+    padding: 1em;
+}
+
+ul {
+    padding-left: 0;
+}
+
+li {
+	display: inline-block;
+}
+
+input[type=submit], nav a, nav a:visited {
+	text-decoration: none;
+	font-weight: bold;
+	
+	border: 1px solid black;
+	background-color: white;
+	padding: 5px;
+	
+	color: black;
+}
+
+input[type=submit]:hover, nav a:hover {
 	background-color: lightgray;
+}
+
+input[type=submit] {
+	background-color: #333666;
+	color: white;
+}
+
+header, footer {
+	background-color: lightgray;
+	padding: 1em;
+}
+
+fieldset {
+	border: 0;
 }
